added support for configs and secrets - updated docker-py version to 2.6.0 with custom modifications
