# api/models/stack.py
@@ -1,6 +1,7 @@
 # coding: utf-8
 
 from __future__ import absolute_import
+from typing import List
 from .base_model_ import Model
 from ..util import deserialize_model
 
@@ -10,7 +11,10 @@ class Stack(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, name: str=None, compose_file: str=None, compose_vars: str=None, engine_url: str=None, ca_cert: str=None, cert: str=None, cert_key: str=None):
+    def __init__(self, name: str=None, compose_file: str=None,
+                 compose_vars: str=None, engine_url: str=None,
+                 ca_cert: str=None, cert: str=None, cert_key: str=None,
+                 external_files: List[object]=None):
         """
         Stack - a model defined in Swagger
 
@@ -28,6 +32,8 @@ class Stack(Model):
         :type cert: str
         :param cert_key: The cert_key of this Stack.
         :type cert_key: str
+        :param external_files: The external_files of this Stack.
+        :type external_files: List[object]
         """
         self.swagger_types = {
             'name': str,
@@ -36,7 +42,8 @@ class Stack(Model):
             'engine_url': str,
             'ca_cert': str,
             'cert': str,
-            'cert_key': str
+            'cert_key': str,
+            'external_files': List[object]
         }
 
         self.attribute_map = {
@@ -46,7 +53,8 @@ class Stack(Model):
             'engine_url': 'engine-url',
             'ca_cert': 'ca-cert',
             'cert': 'cert',
-            'cert_key': 'cert-key'
+            'cert_key': 'cert-key',
+            'external_files': 'external_files'
         }
 
         self._name = name
@@ -56,6 +64,7 @@ class Stack(Model):
         self._ca_cert = ca_cert
         self._cert = cert
         self._cert_key = cert_key
+        self._external_files = external_files
 
     @classmethod
     def from_dict(cls, dikt) -> 'Stack':
@@ -133,3 +142,24 @@ class Stack(Model):
         """
 
         self._compose_vars = compose_vars
+
+    @property
+    def external_files(self) -> List[object]:
+        """
+        Gets the external_files of this Stack.
+
+        :return: The secrets of this Stack.
+        :rtype: List[object]
+        """
+        return self._external_files
+
+    @external_files.setter
+    def external_files(self, external_files: List[object]):
+        """
+        Sets the external_files of this Stack.
+
+        :param external_files: The secrets of this Stack.
+        :type external_files: List[object]
+        """
+
+        self._external_files = external_files
